metadata-sfdx/force-app/main/default/objects/SolutionCenterRefreshEvent__e/SolutionCenterRefreshEvent__e.object-meta.xml
<CustomObject>
    <description>An event to fulfil reqs: 

Need to send a signal to the front end to auto refresh the logged in users screen when a new message, dispute offer, or update to dispute has been made.

WHEN
A new dispute message (message, file or success tip RTs) is inserted -OR-
A new dispute offer is inserted or changed -OR-
An update to the dispute has been made (e.g., change in description or status/stage)

THEN
Display the new information for the logged in user.</description>
    <label>Solution Center Refresh Event</label>
    <pluralLabel>Solution Center Refresh Events</pluralLabel>
</CustomObject>