metadata-sfdx/force-app/main/default/objects/SolutionCenterRefreshEvent__e/fields/DisputeIdHash__c.field-meta.xml
<CustomField>
    <fullName>DisputeIdHash__c</fullName>
    <description>The has value that belongs to the event, first-level filter for the Solution Center Js to determine, "Does this event message belong to the active user's dispute(s)?"</description>
    <label>DisputeIdHash</label>
    <length>32</length>
    <type>Text</type>
</CustomField>