metadata-sfdx/force-app/main/default/objects/SolutionCenterRefreshEvent__e/fields/EventCreatedByHash__c.field-meta.xml
<CustomField>
    <fullName>EventCreatedByHash__c</fullName>
    <description>The hash of the Solution Center Contact who generated the event, e.g., hash of DisputeOffer__c.LastModifiedBy.ContactId</description>
    <label>EventCreatedByHash</label>
    <length>32</length>
    <type>Text</type>
</CustomField>