metadata-sfdx/force-app/main/default/objects/SolutionCenterRefreshEvent__e/fields/SObjectType__c.field-meta.xml
<CustomField>
    <fullName>SObjectType__c</fullName>
    <description>The name of the database object whose trigger fired the platform event, e.g. for Solution Center: DisputeOffer__c or DisputeMessage__c</description>
    <label>SObjectType</label>
    <length>80</length>
    <type>Text</type>
</CustomField>